--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+h1 {
+    font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 55px;
+}
+
+h2 {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 900;
+	font-size: 25px;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    color:#495057;
+	text-align: justify;
+	max-width: 60ch;
+}
+
 .page {
 	width: 850px;
 	background-color: white;
